--- a/jupyter_notebooks/Notebook_Template.ipynb
+++ b/jupyter_notebooks/Notebook_Template.ipynb
@@ -70,12 +70,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'c:\\\\Users\\\\mshin\\\\vs-code-projects\\\\project1_healthcare_insurance\\\\jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "current_dir = os.getcwd()\n",
@@ -117,12 +128,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "vz3S-_kjz3jA",
         "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'c:\\\\Users\\\\mshin\\\\vs-code-projects\\\\project1_healthcare_insurance\\\\jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "current_dir = os.getcwd()\n",
         "current_dir"
@@ -253,11 +275,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -270,7 +290,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12 (default, Nov  7 2022, 16:45:55) \n[GCC 9.4.0]"
+      "version": "3.12.8"
     },
     "orig_nbformat": 2
   },
