Add new graphs and update explantion.

--- a/jupyter_notebooks/project_work/health_insurance_extraction.ipynb
+++ b/jupyter_notebooks/project_work/health_insurance_extraction.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **HealthInsurance_Extraction**"
+        "# **Health Insurance_Extraction**"
       ]
     },
     {
@@ -21,14 +21,14 @@
         "\n",
         "## Inputs\n",
         "\n",
-        "* Require the csv file from Kaggle. \n",
+        "* Require the CSV file from Kaggle. \n",
         "    - For convenience, I am downloading the file and running it locally.\n",
         "    - Here is the link: [kaggle_health_insurance](https://www.kaggle.com/datasets/willianoliveiragibin/healthcare-insurance/data?select=insurance.csv)\n",
         "\n",
         "## Outputs\n",
         "\n",
         "* At the end of this file, I will have:\n",
-        "    - Data extracted in the form of csv\n",
+        "    - Data extracted in the form of CSV\n",
         "    - Data saved as a new CSV (with any changes I require)\n",
         "    - Run a correlation on the DataFrame to figure out how variables are interacting\n",
         "    - Information for further analysis\n",
